Spring with Hibernate

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,34 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-oxm</artifactId>
 		<version>3.2.6.RELEASE</version>
-	</dependency>    
+	</dependency>
+      <!-- Needed from JPA -->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.12</version>
+      </dependency>
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-entitymanager</artifactId>
+          <version>5.2.12.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-orm</artifactId>
+          <version>3.2.0.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.transaction</groupId>
+          <artifactId>jta</artifactId>
+          <version>1.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>5.0.1.RELEASE</version>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>FitnessTracker</finalName>
